--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,5 +41,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Manners and customs -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: Mad Shepherds, and Other Human Studies
 url: http://www.gutenberg.org/ebooks/31386
